update docs and refac validation
